# Amaze_II

./: README.md  partitions_3D.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  CameraWork.cpp  CheckTriangles.cpp  ChunkChooser.cpp  ClipBound.cpp  EventManager.cpp  FindHitFace.cpp  ParseWorld.cpp  RasteriseBox.cpp  ShowError.cpp  ShowWorld.cpp  TimeTracker.cpp  TriangleQueues.cpp  i80_lcd_main.cpp  idf_component.yml  lcd_setup.c  wr_gpio.cpp
main/includes/: CameraWork.h  CheckTriangles.h  ChunkChooser.h  ClipBound.h  EventManager.h  FindHitFace.h  GradientBar.h  ParseWorld.h  RasteriseBox.h  ST7789_def.h  ShowError.h  ShowWorld.h  TimeTracker.h  TriangleQueues.h  buttons.h  events_global.h  geometry.h  globals.h  lcd_setup.h  numberfont.h  structures.h  title.h  wr_gpio.h
partition_table/: partitionTable.csv
